--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-sm">
+    <div class="container-fluid justify-content-center">
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link-active" aria-current="page" href="https://github.com/Genovios/Delta-RedesignPrototype" target="_blank"> [ Repository / Source Code ] &nbsp;</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link-active" aria-current="page" href="https://github.com/Genovios" target="_blank"> [ GitHub Profile ₍^. .^₎⟆ ] &nbsp;</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
     
   <div id="currentDesignBox">
     This is the current timer design:
-    <div>
-      <image id="currPic" src="assets/currTimerPic.png"></image>
+    <div id="currPicBox">
+      <img id="currPic" src="assets/currTimerPic.png">
     </div>
     It always takes at least two clicks to set the timer (the "play" button is
     unclickable unless at least 1 second is set in the timer). The timer also requires
@@ -49,26 +65,41 @@
 
       <!-- CONTROLS -->
       <div>
-        <button id="addMinBtn">+1m</button>
-        <button id="startBtn">Start</button>
-        <button id="pauseBtn">Pause</button>
-        <button id="resetBtn">Reset</button>
-        <button id="stopBtn">Stop</button>
+        <button id="addMinBtn" class="userControls">+1m</button>
+        <button id="startBtn" class="userControls">Start</button>
+        <button id="pauseBtn" class="userControls">Pause</button>
+        <button id="resetBtn" class="userControls">Reset</button>
+        <button id="stopBtn" class="userControls">Stop</button>
       </div>
 
       <!-- STATUS TEXT -->
       <div id="status">Stopped</div>
 
-      <div id="desc">
+    </div>
+
+    <div id="desc">
       This prototype aims to allow the user to start a timer with common preset
       values, which autostart upon clicking so that the user does not need to
       manually start the timer with the "Start" button. Though this protoype 
       may not be particularly useful for larger times, it is certainly helpful
       for quick timer usage at small times.
-      </div>
-
     </div>
+
   </div>
+
+  <footer>
+
+    <a class="nav-link-active" aria-current="page" href="https://genovios.github.io/Genovios/" target="_blank">
+      [ Dev Page ] &nbsp;
+    </a>
+    <a class="nav-link-active" aria-current="page" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgenovios.github.io%2FDelta-RedesignPrototype%2F" target="_blank">
+      [ Nu / HTML Validation ] &nbsp;
+    </a>
+    <a class="nav-link-active" aria-current="page" href="https://wave.webaim.org/report#/https://genovios.github.io/Delta-RedesignPrototype/" target="_blank">
+      [ WAVE / Accessibility Validation ] &nbsp;
+    </a>
+
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
