Added Alt text to image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="currentDesignBox">
     This is the current Timer design:
     <div id="currPicBox">
-      <img id="currPic" src="assets/currTimerPic.png">
+      <img id="currPic" src="assets/currTimerPic.png" alt="Screenshot of a calculator-like timer app">
     </div>
     It always takes at least two clicks to set the timer (the "play" button is
     unclickable unless at least 1 second is set in the timer). The timer also requires
@@ -117,4 +117,5 @@
 
 
 </html>
+
 
