--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button id="startBtn" class="userControls">Start</button>
         <button id="pauseBtn" class="userControls">Pause</button>
         <button id="resetBtn" class="userControls">Reset</button>
-        <button id="stopBtn" class="userControls">Stop</button>
+        <button id="stopBtn" class="userControls">Clear</button>
       </div>
 
       <!-- STATUS TEXT -->
@@ -117,5 +117,6 @@
 
 
 </html>
+
 
 
